src/components/Calendar/index.css
:root {
  --sx-color-primary: var(--color-accent);
  --sx-color-primary-container: var(--color-accent-light);
  --sx-color-on-primary-container: var(--color-text);
  --sx-internal-color-text: var(--color-text);
  --sx-color-surface-dim: var(--color-accent-0);
  --sx-rounding-small: var(--radius);
  --sx-rounding-extra-small: var(--radius);
  /* 100vh - xy padding above card - xy padding below card - header - page title */
  --sx-calendar-calculated-height: calc(100dvh - 48px - 32px - var(--height-header) - var(--height-page-title));
  /* 100vh - xy padding above card - xy padding below card - header - mobile margin - page title */
  --sx-calendar-calculated-height-sm: calc(100dvh - 48px - 32px - var(--height-header) - 16px - var(--height-page-title-sm));
}

.sx__calendar-wrapper {
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-shadow);
  border-radius: var(--radius);
  height: var(--sx-calendar-calculated-height);
}

@media (max-width: 640px) {
  .sx__calendar-wrapper {
    height: var(--sx-calendar-calculated-height-sm);
  }
}

.sx__event:hover {
  cursor: pointer;
}

.sx__month-grid-day__events {
  margin: 1px;
}

.sx__time-grid-event {
  border-radius: 4px;
}

.sx__month-grid-event {
  border-radius: 4px;
}

.sx__event-icon {
  margin-inline-end: 2px;
}

.sx__date-picker-popup {
  border-radius: var(--radius);
}

.sx__week-grid__date {
  gap: 0;
  padding-top: 0;
  height: fit-content;
}

.sx__week-grid__date-number {
  height: 1em;
  width: 1em;
}

.sx__week-grid__date--is-today .sx__week-grid__date-number {
  background-color: transparent;
  color: var(--color-accent);
}

.sx__current-time-indicator {
  background-color: var(--sx-color-primary);
}

.sx__calendar-header {
  padding: 12px;
}

